added ERB frankfurt

--- a/src/pages/Pastors.css
+++ b/src/pages/Pastors.css
@@ -479,4 +479,9 @@
     font-size: 2.8rem;   /* was 4rem */
   }
 
+  /* Reduce "Unsere Leitung" heading */
+  .pastors-heading {
+    font-size: 3rem;   /* was 3.4rem */
+  }
+
 }
