added ERB frankfurt

--- a/src/pages/HomeDE.css
+++ b/src/pages/HomeDE.css
@@ -102,7 +102,7 @@
   position: absolute;
   bottom: 6rem;
   left: 50%;
-  transform: translateX(-70%);
+  transform: translateX(-50%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -354,5 +354,11 @@
   .scroll-arrows span {
     width: 26px;
     height: 26px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .scroll-arrows {
+    transform: translateX(-80%);
   }
 }
