--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -5,7 +5,7 @@
 .contact-page {
   min-height: 100vh;
 /*  background: linear-gradient(135deg, #0c2340, #1e3a5f);*/
-  background: #26343a; /* ✅ unified solid background */
+  background: #131A28; /* ✅ unified solid background */
   font-family: "Georgia", serif;
   color: #EAF1FF;
   display: flex;
