--- a/src/pages/Messages.css
+++ b/src/pages/Messages.css
@@ -224,3 +224,17 @@
   }
 }
 
+.youtube-playlist-wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  aspect-ratio: 16 / 9;
+}
+
+.youtube-playlist-wrapper iframe {
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+}
+
