changed font size

--- a/src/pages/HomeDE.css
+++ b/src/pages/HomeDE.css
@@ -258,7 +258,7 @@
   background: #DADADA;
   padding: 2.4rem 1.8rem;
   border-radius: 2rem;
-  color: #2d1b0a;
+  color: #131A28;
 }
 
 .matter-block h3 {
