--- a/src/pages/BeliefEN.css
+++ b/src/pages/BeliefEN.css
@@ -179,8 +179,7 @@
   font-size: 1.6rem;             /* ⬅️ stronger emphasis */
   line-height: 1.7;
   font-style: italic;
-
-  color: #000000;
+  color: #131A28;
 
   padding: 2.4rem 3rem;
   background: #DADADA;          /* ✅ BOX COLOR */
@@ -207,7 +206,7 @@
   font-size: 1.05rem;
   font-style: normal;
   font-weight: 700;
-  color: #000000;
+  color: #131A28;
   text-align: right;
 }
 
