--- a/src/pages/HomeEN.css
+++ b/src/pages/HomeEN.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Cardo:ital@0;1&display=swap');
+
+.cardo-exclamation {
+  font-family: 'Cardo', serif;
+  font-weight: 400;
+  margin-left: 2px;
+}
+
 /* ================= ROOT ================= */
 .home-page {
   min-height: 100vh;
